--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>component/load-styles test</title>
+  <title>load-styles test</title>
   <script type="text/javascript" src="build/build.js"></script>
   <body>
     <div id="foo">This div should be red.</div>
